# overseerd

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  justfile  mise.toml
benchmarks/: Cargo.toml
benchmarks/benches/: config_resolution.rs  di_graph_memory.rs  di_hot_paths.rs  rpc_dispatch.rs  serde_abstraction.rs  ws_pubsub_fanout.rs
benchmarks/src/: alloc.rs  di.rs  lib.rs  measure.rs
crates/analyze/: CHANGELOG.md  Cargo.toml
crates/analyze/src/: check.rs  lib.rs  parse.rs
crates/app/: CHANGELOG.md  Cargo.toml  README.md
crates/app/src/: app.rs  error.rs  host.rs  lib.rs  lifecycle.rs  protocol.rs  registry.rs  runtime.rs
crates/app/src/app/: tests.rs
crates/app/src/builtins/: config.rs  logging.rs  mod.rs  shutdown.rs
crates/app/src/host/: application.rs  cli.rs  tests.rs
crates/axum/: CHANGELOG.md  Cargo.toml  README.md
crates/axum-json-ws/: CHANGELOG.md  Cargo.toml
crates/axum-json-ws/src/: lib.rs  tests.rs
crates/axum-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/axum-macros/src/: client.rs  dto.rs  handlers.rs  lib.rs  openapi.rs  route.rs  router.rs  topics.rs
crates/axum-macros/src/handlers/: tests.rs
crates/axum-macros/src/topics/: tests.rs
crates/axum-stomp/: CHANGELOG.md  Cargo.toml
crates/axum-stomp/src/: client.rs  lib.rs  server.rs
crates/axum-stomp/src/client/: transport.rs  wasm.rs
crates/axum-stomp/src/server/: auth.rs  body.rs  broker.rs  error.rs  headers.rs  tests.rs
crates/axum/src/: config.rs  controller.rs  dto.rs  error.rs  extract.rs  lib.rs  messaging.rs  middleware.rs  openapi.rs  plugin.rs  protocol.rs  request_meta.rs  scope.rs  stomp.rs  stream.rs
crates/axum/src/client/: body.rs  connection.rs  headers.rs  hyper_backend.rs  interceptor.rs  messaging.rs  mod.rs  reqwest_backend.rs  response.rs  stomp.rs  streaming.rs  tests.rs  websocket.rs  ws_rt.rs
crates/axum/src/config/: tests.rs
crates/axum/src/middleware/: tests.rs
crates/axum/src/openapi/: tests.rs
crates/axum/src/request_meta/: tests.rs
crates/axum/src/stomp/: tests.rs
crates/axum/src/stream/: tests.rs
crates/axum/src/ws/: json.rs  mod.rs  tests.rs
crates/client/: CHANGELOG.md  Cargo.toml  README.md
crates/client/src/: lib.rs
crates/client/src/lib/: tests.rs
crates/config/: CHANGELOG.md  Cargo.toml  README.md
crates/config/src/: de.rs  defaults.rs  error.rs  lib.rs  parse.rs  resolve.rs  value.rs
crates/config/src/format/: mod.rs  toml.rs  yaml.rs
crates/config/src/managed/: dirs.rs  mod.rs  reload.rs  source.rs  store.rs  trigger.rs
crates/config/tests/: namespace_and_defaults.rs  substitution.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: connection.rs  construct.rs  container.rs  daemon.rs  dependency.rs  descriptor.rs  dirs.rs  error.rs  extract.rs  health.rs  lib.rs  lifecycle.rs  platform.rs  resolver.rs  router.rs  scope.rs  types.rs
crates/core/src/builtins/: config.rs  logging.rs  mod.rs  shutdown.rs
crates/core/src/config/: mod.rs  reload.rs  source.rs  trigger.rs
crates/core/src/descriptor/: tests.rs
crates/core/src/descriptors/: component.rs  mod.rs  types.rs
crates/core/src/hooks/: lifecycle.rs  mod.rs
crates/core/src/middleware/: mod.rs
crates/core/src/registry/: mod.rs
crates/core/src/resolver/: tests.rs
crates/core/tests/: resolver_set_performance.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: daemon.rs  error.rs  extract.rs  lib.rs  protocol.rs  registry.rs  router.rs  runtime.rs
crates/daemon/src/builtins/: config.rs  mod.rs  shutdown.rs
crates/daemon/src/descriptors/: rpc.rs
crates/di/: CHANGELOG.md  Cargo.toml  README.md
crates/di/src/: construct.rs  container.rs  error.rs  lib.rs  primitives.rs  registry.rs  root.rs  seeded.rs
crates/di/src/container/: tests.rs
crates/di/src/descriptors/: component.rs  mod.rs
crates/di/src/primitives/: tests.rs
crates/di/src/registry/: order.rs
crates/di/tests/: memory_contracts.rs
crates/dirs/: CHANGELOG.md  Cargo.toml  README.md
crates/dirs/src/: lib.rs  tests.rs  windows.rs
crates/hooks/: CHANGELOG.md  Cargo.toml  README.md
crates/hooks/src/: error.rs  lib.rs  tests.rs
crates/jobs/: CHANGELOG.md  Cargo.toml  README.md
crates/jobs-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/jobs-macros/src/: jobs.rs  lib.rs
crates/jobs/src/: descriptor.rs  error.rs  lib.rs  log.rs  logging.rs  metrics.rs  plugin.rs  registry.rs  run.rs  schedule.rs  scheduler.rs
crates/jobs/src/log/: tests.rs
crates/macros/: CHANGELOG.md  Cargo.toml  README.md
crates/macros-core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/macros-core/src/: app.rs  attr.rs  backend.rs  client.rs  component.rs  config.rs  di.rs  extend.rs  gate.rs  handle.rs  hook.rs  inject.rs  injectable.rs  lib.rs  methods.rs  parse_keyed.rs  paths.rs  provide.rs
crates/macros/src/: app.rs  attr.rs  case.rs  component.rs  config.rs  daemon.rs  derive.rs  di.rs  handle.rs  handlers.rs  hook.rs  inject.rs  injectable.rs  lib.rs  methods.rs  paths.rs  provide.rs  service.rs
crates/overseerd-build/: CHANGELOG.md  Cargo.toml  README.md
crates/overseerd-build/src/: lib.rs
crates/rpc/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/rpc-macros/src/: handlers.rs  lib.rs  router.rs  rpc.rs  service.rs
crates/rpc/src/: client.rs  error.rs  extract.rs  lib.rs  plugin.rs  protocol.rs  router.rs  routes.rs  scope.rs
crates/transport/: CHANGELOG.md  Cargo.toml  README.md
crates/transport/src/: codec.rs  di.rs  error.rs  frame.rs  lib.rs  status.rs  stream_codec.rs  transport.rs
docs/: stomp.md  (+3 more)
examples/daemon/: Cargo.toml  build.rs
examples/daemon/config/: application.toml
examples/daemon/src/: components.rs  main.rs  notifiers.rs  service.rs
examples/http/: Cargo.toml
examples/http/src/: auth.rs  docs.rs  greet.rs  lib.rs  main.rs  stomp.rs  ws.rs
examples/http/tests/: client.rs  extractors.rs  openapi.rs  routes.rs  stomp.rs  topic_generics.rs  ws.rs
examples/jobs/: Cargo.toml
examples/jobs/src/: main.rs
(+158 files in other folders)
