[workspace]
members = [
    ".",
    "crates/*",
    "examples/daemon",
]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
repository = "https://github.com/retrokiller543/overseerd"
homepage = "https://github.com/retrokiller543/overseerd"
keywords = ["daemon", "rpc", "framework", "async", "ioc"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
# Workspace member crates. The `version` is required for publishing: crates.io
# strips the `path` and resolves the dependency by version instead.
overseerd-config = { path = "crates/config", version = "0.6.0" }
overseerd-core = { path = "crates/core", version = "0.6.0" }
overseerd-di = { path = "crates/di", version = "0.6.0" }
overseerd-dirs = { path = "crates/dirs", version = "0.6.0" }
overseerd-hooks = { path = "crates/hooks", version = "0.6.0" }
overseerd-app = { path = "crates/app", version = "0.6.0" }
overseerd-client = { path = "crates/client", version = "0.6.0" }
overseerd-rpc = { path = "crates/rpc", version = "0.6.0" }
overseerd-macros = { path = "crates/macros", version = "0.6.0" }
overseerd-macros-core = { path = "crates/macros-core", version = "0.6.0" }
overseerd-rpc-macros = { path = "crates/rpc-macros", version = "0.6.0" }
overseerd-transport = { path = "crates/transport", version = "0.6.0" }

# Common dependencies
arc-swap = "1.9.1"
bitflags = "2"
notify = "6"
thiserror = "2"
toml = "1.1"
serde_yaml_ng = "0.10"
directories = "6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
async-trait = "0.1"
linkme = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[package]
name = "overseerd"
description = "An async daemon framework with compile-time dependency injection, typed RPC, and config — the all-in-one facade crate."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["di-check", "daemon"]

# Re-export the native RPC daemon (`overseerd-rpc` + its macros) through the facade for
# convenience. Disable for a core-framework-only build (`default-features = false`); the
# daemon then lives in its own `overseerd-rpc` / `overseerd-rpc-macros` crates.
daemon = ["dep:overseerd-rpc", "dep:overseerd-rpc-macros"]

# Compile the generated client SDK (the RPC daemon's client). Opt in via
# `overseerd = { features = ["client"] }`; no feature is needed in the user crate.
client = ["daemon", "overseerd-rpc/client", "overseerd-rpc-macros/client"]

# Emit compile-time dependency-injection checks (a `Wiring: Provide<Dep>` bound
# per concrete dependency). A missing provider becomes a `cargo check` error.
di-check = [
    "overseerd-macros/di-check",
    "overseerd-di/di-check",
    "overseerd-config/di-check",
    "overseerd-app/di-check",
    "overseerd-rpc?/di-check",
    "overseerd-rpc-macros?/di-check",
]

# Enable YAML config sources (`application.yaml`) alongside the default TOML.
yaml = ["overseerd-config/yaml", "overseerd-app/yaml", "overseerd-rpc?/yaml"]

# Provide the `init_tracing` helper, pulling in `tracing-subscriber`.
tracing-subscriber = ["overseerd-app/tracing-subscriber"]

# Watch config files and reload on change (`ConfigManager::watch_config`), via `notify`.
watch = ["overseerd-config/watch", "overseerd-app/watch", "overseerd-rpc?/watch"]

[dependencies]
overseerd-core = { workspace = true }
overseerd-di = { workspace = true }
overseerd-hooks = { workspace = true }
overseerd-dirs = { workspace = true }
overseerd-config = { workspace = true }
overseerd-app = { workspace = true }
overseerd-client = { workspace = true }
overseerd-rpc = { workspace = true, optional = true }
overseerd-transport = { workspace = true }
overseerd-macros = { workspace = true }
overseerd-rpc-macros = { workspace = true, optional = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
