[package]
name = "overseerd-analyze"
description = "Build-time dependency-injection graph analysis for the overseerd daemon framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = { workspace = true }
proc-macro2 = { version = "1", features = ["span-locations"] }
