[package]
name = "overseerd-app"
description = "The Overseerd protocol-agnostic application core: the App/AppBuilder, the Plugin/Protocol traits, the DI runtime handle, scope planning, lifecycle, and builtins."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["cli"]
cli = ["dep:clap", "overseerd-macros/cli"]
di-check = [
    "overseerd-di/di-check",
    "overseerd-config/di-check",
]
yaml = ["overseerd-config/yaml"]
watch = ["overseerd-config/watch"]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies]
overseerd-core = { workspace = true }
overseerd-di = { workspace = true }
overseerd-hooks = { workspace = true }
overseerd-config = { workspace = true }
overseerd-dirs = { workspace = true }
overseerd-macros = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
thiserror = { workspace = true }
clap = { workspace = true, optional = true }
