[package]
name = "overseerd-axum-json-ws"
description = "JSON request/reply WebSocket protocol for overseerd-axum."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
client = ["overseerd-axum/client", "dep:overseerd-client"]
tungstenite = ["client", "overseerd-axum/tungstenite"]

[dependencies]
overseerd-axum = { path = "../axum", default-features = false, features = ["ws"] }
overseerd-client = { workspace = true, optional = true }
overseerd-transport = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
