[package]
name = "overseerd-axum-macros"
description = "The Overseerd axum/HTTP controller macros (#[controller], #[handlers], route attributes), built on overseerd-macros-core. Re-exported through the overseerd facade's web module; depend on the facade, not this crate."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
# Emit the generated HTTP client (forwarded to macros-core; no client is emitted in v1).
client = ["overseerd-macros-core/client"]
# Emit the compile-time dependency-injection assertions (forwarded to macros-core).
di-check = ["overseerd-macros-core/di-check"]

[dependencies]
overseerd-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
