[package]
name = "overseerd-axum-macros"
description = "The Overseerd axum/HTTP controller macros (#[controller], #[handlers], route attributes), built on overseerd-macros-core. Re-exported through the overseerd facade's web module; depend on the facade, not this crate."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
# Emit the generated HTTP client (forwarded to macros-core).
client = ["overseerd-macros-core/client"]
# Signals that the `reqwest` (fetch) backend is available, so the client codegen may emit the
# wasm `#[wasm_bindgen]` binding over `ReqwestClient`. Forwarded by `overseerd-axum`'s `reqwest`
# feature; pure codegen signal (adds no dependency here).
reqwest = ["client"]
# Signals the WebSocket transport is available, so the STOMP `#[topics]`/`#[message]` client codegen
# may emit the wasm binding over `StompClientTransport`. Forwarded by `overseerd-axum`'s
# `tungstenite` feature; pure codegen signal.
tungstenite = ["client"]
# Opt into the *new* `tsify` wasm ABI: `#[dto]` derives plain `Tsify` and the generated browser
# client marshals via `Ts<T>` (typed, and free of the memory leak the published `into_wasm_abi`
# path has). Needs the unreleased `tsify` (git master) as a wasm dep. Off by default, which uses the
# published `tsify` (`into_wasm_abi`/`from_wasm_abi`) so a client builds with no git dependency.
wasm-ts = []
# Emit the OpenAPI codegen: `#[dto]` adds a `utoipa::ToSchema` derive + schema registration, and
# each HTTP route emits a `#[utoipa::path]` operation + slice entry. Pure codegen signal (adds no
# dependency here); gating is resolved *inside* the macro via `cfg!(feature = "openapi")` so the
# emitted tokens are concrete — never a `cfg_attr(feature = ..)` that would leak onto the user crate.
openapi = []
# Emit the compile-time dependency-injection assertions (forwarded to macros-core).
di-check = ["overseerd-macros-core/di-check"]
# Root generated plugin types at the `overseerd` facade (`::overseerd::axum::*`) instead of
# this protocol crate (`::overseerd_axum::*`). Enabled by the `overseerd` facade; off means the
# standalone `overseerd-axum` is the root. Core vocabulary is always `::overseerd` either way.
facade = []

[dependencies]
overseerd-macros-core = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
